force-app/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__PartialSave__c.field-meta.xml
<CustomField>
    <fullName>ffirule__PartialSave__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Saves target records even if other records in the batch fail to save.</description>
    <label>Partial Save</label>
    <type>Checkbox</type>
</CustomField>