force-app/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__SyncEnabled__c.field-meta.xml
<CustomField>
    <fullName>ffirule__SyncEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Enabled</label>
    <type>Checkbox</type>
</CustomField>