force-app/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__TargetCreationOnSourceInsert__c.field-meta.xml
<CustomField>
    <fullName>ffirule__TargetCreationOnSourceInsert__c</fullName>
    <label>Target Relation with Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One to Many</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>